# isnad-graph

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml
.claude/: settings.json
.claude/context/: active-state.md  brand-identity.md  data-sources.md
.claude/hooks/: block_git_config.py  block_no_verify.py  validate_commit_identity.py
.claude/skills/: plan-phase.md  retro.md  team-reset.md  wave-audit.md  wave-kickoff.md  wave-retro.md  wave-start.md
.claude/team/: charter.md  feedback_log.md  roster.json  trust_matrix.md
.claude/team/feedback/: retro-phase11-wave3.md
.claude/team/roster/: architect_arjun.md  architect_renaud.md  data_engineer_tariq.md  data_lead_elena.md  data_scientist_mei.md  devops_architect_sunita.md  devops_engineer_tomasz.md  engineer_amara.md  engineer_carolina.md  engineer_hiro.md  engineer_kwame.md  manager_fatima.md  manager_nadia.md  qa_engineer_marisol.md  qa_engineer_priya.md  security_engineer_yara.md  tech_lead_anya.md  tech_lead_dmitri.md
.claude/worktrees/carolina-node24-npm-audit/: .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.prod.yml  pyproject.toml
.claude/worktrees/carolina-node24-npm-audit/docs/: phase1-claude-code-instructions.md  team-interaction-audit.md
.claude/worktrees/carolina-node24-npm-audit/feedback/: retro-phase9-wave1.md
.claude/worktrees/carolina-node24-npm-audit/frontend/: package-lock.json  (+1 more)
.claude/worktrees/carolina-settings-session-630-632/: Caddyfile
.claude/worktrees/elena-610-611/: .dockerignore
.claude/worktrees/elena-disambiguate-607/: CLAUDE.md
.claude/worktrees/elena-pipeline-652/: .env.example  Makefile
.claude/worktrees/hiro-auth-ux-628/: .env.example  .gitattributes
.claude/worktrees/hiro-layout-643/: README.md  docker-compose.prod.yml
.claude/worktrees/priya-a11y-551/: CLAUDE.md
.claude/worktrees/rashid-data-quality-608-609/: Makefile  docker-compose.yml
.claude/worktrees/tomasz-caddy-602/: Caddyfile  docker-compose.prod.yml
.githooks/: pre-push
.github/ISSUE_TEMPLATE/: security-review.md
.github/workflows/: auto-close-issues.yml  ci.yml  deploy.yml  ghcr-publish.yml  notify-deploy.yml  pipeline.yml  restore.yml  verify-deploy.yml
data/: .manifest.json
data/curated/: ner_name_audit.csv
docs/: api-developer-guide.md  ci-job-name-audit.md  structured-logging.md
docs/adr/: 005-container-registry-deployment.md  README.md
docs/data/: source-health-check.md
docs/deployment/: backups.md  security-review.md
docs/devops/: deployment-verification.md  ghcr-publish-design.md
docs/diagrams/: hadith_analysis_platform.mmd  implementation_gannt_phases.mmd
docs/ops/: admin-bootstrap.md
docs/security/: security-headers-cors-audit.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/api/: admin-client.ts  client.ts  profile-client.ts
frontend/src/components/: AdminLayout.module.css  AdminLayout.tsx  AdminRoute.tsx  ForceGraph.tsx  Layout.tsx  ProtectedRoute.tsx  SessionExpiredModal.tsx  Sidebar.tsx  UserMenu.tsx  WelcomeBanner.tsx
frontend/src/hooks/: useAuth.ts  useTheme.ts
frontend/src/pages/: AuthCallbackPage.tsx  CheckEmailPage.tsx  CollectionDetailPage.tsx  CollectionsPage.tsx  ComparativePage.tsx  GraphExplorerPage.tsx  HadithDetailPage.tsx  HadithsPage.tsx  HomePage.tsx  LoginPage.tsx  NarratorDetailPage.tsx  NarratorsPage.tsx  OAuthCallbackPage.tsx  ProfilePage.tsx  SearchPage.tsx  TimelinePage.tsx  VerifyEmailPage.tsx
frontend/src/styles/: common.css  theme.css
frontend/src/types/: api.ts
frontend/tests/e2e/: accessibility.spec.ts  auth.spec.ts  navigation.spec.ts  search.spec.ts
infra/loki/: loki-config.yml
infra/neo4j/: Dockerfile
infra/prometheus/: prometheus.yml
scripts/: backup.sh  bootstrap-vps.sh  data_profile.py  sample_real_data.py  scrape_islamic_timeline.py  sync_to_vps.py
src/: cli.py  config.py
src/acquire/: __init__.py  base.py  fawaz.py  muhaddithat.py  sanadset.py  sunnah_scraper.py
src/api/: app.py  auth.py  deps.py  middleware.py  models.py  security.py
src/api/routes/: auth.py  collections.py  graph.py  health.py  narrators.py  parallels.py  profile.py  timeline.py
src/auth/: __init__.py  jwks.py  models.py  pg_users.py  providers.py  tokens.py
src/enrich/: __init__.py  historical.py  metrics.py  topics.py
src/graph/: load_edges.py  load_nodes.py  validate.py
src/models/: enrich.py  historical.py
src/parse/: __init__.py  base.py  enrich_metadata.py  fawaz.py  lk_corpus.py  muhaddithat.py  open_hadith.py  sanadset.py  sunnah_api.py  thaqalayn.py  validate.py
src/pipeline/: audit.py  manifest.py
src/resolve/: __init__.py  dedup.py  disambiguate.py  ner.py
src/utils/: logging.py  neo4j_client.py
terraform/: README.md  main.tf  variables.tf
tests/: conftest.py  test_config.py
tests/e2e/: conftest.py  test_error_pages.py
tests/integration/: conftest.py  test_api_endpoints.py  test_cross_service_auth.py
tests/test_api/: conftest.py  test_admin.py  test_admin_auth.py  test_admin_config.py  test_admin_moderation.py  test_admin_reports.py  test_collections.py  test_graph.py  test_health.py  test_negative.py  test_search.py
tests/test_auth/: conftest.py  test_jwt_validation.py  test_middleware.py  test_providers.py  test_security.py  test_subscription.py  test_tokens.py  test_trial_enforcement.py
tests/test_enrich/: test_historical.py  test_metrics.py  test_models.py  test_topics.py
tests/test_graph/: conftest.py
tests/test_parse/: test_fawaz_parser.py  test_negative.py  test_open_hadith_parser.py  test_schemas.py
tests/test_resolve/: test_dedup.py  test_disambiguate.py  test_negative.py  test_ner.py
tests/test_security/: conftest.py  test_auth_bypass.py  test_idor.py  test_parameter_tampering.py
tests/test_utils/: test_arabic.py  test_arabic_fuzz.py  test_logging.py
(+396 files in other folders)
